# opta-skeleton

./: .env.example  .gitignore  README.md  docker-compose.yml
services/sr_analysis/: Dockerfile  README.md  app.py  bc_config.py  gemini_client.py  logging.py  models.py  pyproject.toml  router.py  settings.py
services/sr_analysis/modules/: __init__.py  content_best_practices_l1.py  content_best_practices_l2.py  h1_meta_optimization.py  html_element_gap.py  information_gap.py  llm_optimization.py  overall_score.py  prompt_builder.py  schema_json_ld.py  schema_markup.py  serp_feature_opportunity.py
services/sr_analysis/tests/: conftest.py  test_async_endpoints.py  test_bc_config.py  test_content_best_practices_l1.py  test_content_best_practices_l2.py  test_gemini_client.py  test_health.py  test_information_gap.py  test_llm_optimization.py  test_logging.py  test_models.py  test_modules.py  test_prompt_builder.py  test_qa_comprehensive.py  test_router.py  test_schema_json_ld.py  test_settings.py
services/sr_parsing/: .dockerignore  Dockerfile  README.md  __init__.py  app.py  browser.py  fetcher.py  logging.py  models.py  pyproject.toml  requirements.txt  robots.py  router.py  settings.py  sufficiency.py  urls.py  xhr_sniffer.py
services/sr_parsing/app/: main.py
services/sr_parsing/data/: high_authority_domains.json  operators.json
services/sr_parsing/extractors/: __init__.py  body_text.py  callout_boxes.py  comparison_tables.py  eeat.py  faq.py  freshness.py  headings.py  images.py  jsonld.py  links.py  lists.py  meta.py  meta_desc.py  pagination.py  runner.py  step_by_step.py  tables.py  technical.py  title.py  toc.py  videos.py
services/sr_parsing/pagespeed/: __init__.py  client.py  models.py
services/sr_parsing/serp/: client.py  extractor.py  models.py  pipeline.py  scorer.py
services/sr_parsing/sinks/: __init__.py  db.py  (+5 more)
(+83 files in other folders)
