[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "scraper-service"
version = "1.0.0"
description = "Production-grade web scraping and SERP analysis microservice with tiered fetching, structured extraction, and multiple output sinks"
readme = "README.md"
requires-python = ">=3.12"
authors = [
    {name = "Optimization Agent Team"},
]
dependencies = [
    "fastapi>=0.135.0",
    "httpx>=0.28.0",
    "playwright>=1.58.0",
    "pydantic>=2.12.0",
    "pydantic-settings>=2.13.0",
    "structlog>=25.0.0",
    "tenacity>=9.0.0",
    "selectolax>=0.4.7",
    "beautifulsoup4>=4.14.0",
    "lxml>=6.0.0",
    "sqlalchemy[asyncio]>=2.0.49",
    "aiomysql>=0.3.2",
    "cryptography>=44.0.0",
    "robotexclusionrulesparser>=1.7.0",
    "uvicorn>=0.44.0",
]

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.mypy]
plugins = ["pydantic.mypy"]
strict = true
